<resources>
    <string name="app_name">Tapad</string>
    <string name="blank"></string>
    <string name="error">Error</string>
    <string name="welcome_next">NEXT</string>
    <string name="welcome_skip">SKIP</string>
    <string name="welcome_start">GOT IT</string>
    <string name="slide_1_title">Tapad</string>
    <string name="slide_1_desc">Welcome to</string>
    <string name="slide_2_title">Play your favorite songs</string>
    <string name="slide_2_desc">Anywhere, anytime. Beautifully.</string>
    <string name="slide_3_title">Presets</string>
    <string name="slide_3_desc">Select a music preset to play</string>
    <string name="slide_3_hint">More songs coming!</string>
    <string name="slide_4_title">Make some music!</string>
    <string name="slide_4_desc">Configure finished.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="back">Press back again to exit</string>
    <string name="tutorial_loading">Can\'t start tutorial mode, loading preset</string>
    <string name="cardview_explore">EXPLORE</string>
    <string name="cardview_change">CHANGE</string>
    <string name="cardview_settings">SETTINGS</string>
    <string name="cardview_now_playing">Now Playing</string>
    <string name="fb">Facebook</string>
    <string name="tw">Twitter</string>
    <string name="sc">SoundCloud</string>
    <string name="yt">YouTube</string>
    <string name="wb">Webpage</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="soundcloud">SoundCloud</string>
    <string name="youtube">YouTube</string>
    <string name="web">Webpage</string>
    <string name="bi">Biography</string>
    <string name="hello_full">OMFG - Hello</string>
    <string name="hello">Hello</string>
    <string name="hello_artist">OMFG</string>
    <string name="hello_about">About OMFG</string>
    <string name="hello_bio">OMFG\'s Biography</string>
    <string name="hello_bio_name">Alex OMFG (Alex Savage)</string>
    <string name="hello_bio_full">This is a Fun Loving girl who had a desire to make music.
        Alex enjoyed making dubstep to just share between friends and family.
        She soon talked her self into posting her creations online to see what kinda feedback she would get.
        getting an overly positive reveiws she continued to make music ever since with her latest track called OMFG - Jelly.</string>
    <string name="hello_bio_source">Powered by Muzikum</string>
    <string name="hello_fb">https://www.facebook.com/alexomfg/</string>
    <string name="hello_tw">https://twitter.com/AlexSavageOMFG</string>
    <string name="hello_sc">https://soundcloud.com/alexomfg</string>
    <string name="hello_yt">https://www.youtube.com/user/alexsavageomfg</string>
    <string name="hello_wb">http://alexomfg.com</string>
    <string name="hello_facebook">@string/hello_fb</string>
    <string name="hello_twitter">@string/hello_tw</string>
    <string name="hello_soundcloud">@string/hello_sc</string>
    <string name="hello_youtube">@string/hello_yt</string>
    <string name="hello_web">@string/hello_wb</string>
    <string name="roses_full">The Chainsmokers - Roses</string>
    <string name="roses">Roses</string>
    <string name="roses_artist">The Chainsmokers</string>
    <string name="roses_about">About The Chainsmokers</string>
    <string name="roses_bio">The Chainsmokers\' Biography</string>
    <string name="roses_bio_name">Andrew Taggart and Alex Pall</string>
    <string name="roses_bio_full">The Chainsmokers have become the hottest young American EDM DJ duo.
        Their signature sound has its foundations in Indie, Progressive and Pop Music.
        On the production front, their original tracks have all reached the Beatport top charts and their remixes always hit #1 on the HypeM charts.
        Their first major release, #SELFIE, and it\'s official music video swept the world so look out for much more to come!</string>
    <string name="roses_bio_source">Powered by thechainsmokers.com</string>
    <string name="roses_fb">https://www.facebook.com/thechainsmokers</string>
    <string name="roses_tw">http://www.twitter.com/thechainsmokers</string>
    <string name="roses_sc">http://www.soundcloud.com/thechainsmokers</string>
    <string name="roses_yt">https://www.youtube.com/user/THECHAINSMOKERS</string>
    <string name="roses_wb">http://thechainsmokers.com/</string>
    <string name="roses_facebook">@string/roses_fb</string>
    <string name="roses_twitter">@string/roses_tw</string>
    <string name="roses_soundcloud">@string/roses_sc</string>
    <string name="roses_youtube">@string/roses_yt</string>
    <string name="roses_web">@string/roses_wb</string>
    <string name="faded_full">Alan Walker - Faded</string>
    <string name="faded">Faded</string>
    <string name="faded_artist">Alan Walker</string>
    <string name="faded_about">About Alan Walker</string>
    <string name="faded_bio">Alan Walker\'s Biography</string>
    <string name="faded_bio_name">Alan Olav Walker</string>
    <string name="faded_bio_full">Alan Walker (Alan Olav Walker) is a British-Norwegian record producer who was born in Northampton, England.
        He is best known for the electronic dance music single "Faded", which has reached number 1 in multiple countries,
        and on YouTube has over 650 million views and 4 million likes, placing it among the top 40 most liked YouTube videos.</string>
    <string name="faded_bio_source">Powered by Wikipedia</string>
    <string name="faded_fb">https://www.facebook.com/alanwalkermusic</string>
    <string name="faded_tw">https://twitter.com/IAmAlanWalker</string>
    <string name="faded_sc">https://soundcloud.com/alanwalker</string>
    <string name="faded_yt">https://www.youtube.com/user/DjWalkzz</string>
    <string name="faded_wb">http://www.alanwalkermusic.no/</string>
    <string name="faded_facebook">@string/faded_fb</string>
    <string name="faded_twitter">@string/faded_tw</string>
    <string name="faded_soundcloud">@string/faded_sc</string>
    <string name="faded_youtube">@string/faded_yt</string>
    <string name="faded_web">@string/faded_wb</string>
    <string name="berict_full">Studio Berict</string>
    <string name="berict_about">About Studio Berict</string>
    <string name="berict_bio">Berict\'s Biography</string>
    <string name="berict_bio_name">Bedrock Pictures (Nathan Cho)</string>
    <string name="berict_bio_full">Nathan is high school student in South Korea, who enjoys software and football.
        Currently attending Sunrin Internet High School in the 1st grade.
        Started developing about 5 years ago, started by HTML, now on Android.
        As you see, he has a big interest in Android\'s "Material Design".
        Also, known as a professional 9gagger.</string>
    <string name="berict_bio_source">Powered by Studio Berict</string>
    <string name="berict_yt">https://www.youtube.com/user/bedrockpicture</string>
    <string name="berict_wb">http://berict.com</string>
    <string name="berict_youtube">https://www.youtube.com/user/bedrockpicture</string>
    <string name="berict_web">http://berict.com</string>
    <string name="berict_support">Support Development</string>
    <string name="dev_report_bug">Report bugs</string>
    <string name="dev_report_bug_hint">Help us fix bugs and problems</string>
    <string name="dev_translate">Translate Tapad</string>
    <string name="dev_translate_hint">Make Tapad available on your language</string>
    <string name="dev_translate_error">Sorry, this feature is not available yet.</string>
    <string name="dev_rate">Rate Tapad</string>
    <string name="dev_rate_hint">Leave positive rating on Tapad</string>
    <string name="dev_donate">Donate</string>
    <string name="dev_donate_hint">Boost dev on updating Tapad</string>
    <string name="dev_donate_error">Thanks! But this feature is not available yet ;)</string>
    <string name="google_play">Google Play</string>
    <string name="tapad">Tapad</string>
    <string name="tapad_about">About Tapad</string>
    <string name="tapad_about_desc">Probably the best looking launchpad out there.</string>
    <string name="tapad_about_full">Tapad is a launchpad app for Android.
        It implemented the Material Design from the Google Design Guideline, and it looks beautiful.
        It mainly features song genres like EDM, Dubstep, Progressive House, Electronic.</string>
    <string name="tapad_about_source">Powered by Studio Berict</string>
    <string name="tapad_play">https://play.google.com/store/apps/details?id=com.bedrock.padder</string>
    <string name="tapad_changelog">Changelog</string>
    <string name="tapad_thanks">Special thanks</string>
    <string name="tapad_thanks_dialog">Special thanks to</string>
    <string name="tapad_thanks_text">
        <b>Stack Overflow</b>\n
        <i>http://stackoverflow.com/</i>\n
        No description needed. (Devs will know)\n\n

        <b>Androidhive</b>\n
        <i>http://www.androidhive.info/</i>\n
        Helped with a lot of Material Design implementation.\n\n

        <b>Material Design Guidelines</b>\n
        <i>https://material.google.com/</i>\n
        Greatest guideline for a great UX / UI.\n\n

        <b>Material Design Icons</b>\n
        <i>https://materialdesignicons.com/</i>\n
        Tons of beautiful icons following Material Design guideline.\n\n

        <b>9GAG</b>\n
        <i>http://9gag.com/u/bedrockpic</i>\n
        9GAG, Best source of your fun!
    </string>
    <string name="tapad_info">Information</string>
    <string name="tapad_check_update">Check updates</string>
    <string name="tapad_check_update_hint">Open in Google Play Store</string>
    <string name="tapad_legal">Legal Information</string>
    <string name="settings_group_play">Play</string>
    <string name="settings_preset">Presets</string>
    <string name="settings_preset_hint">@string/hello_full</string>
    <string name="settings_custom_sound">Custom sound</string>
    <string name="settings_tutorial">Tutorial mode</string>
    <string name="settings_group_interface">Interface</string>
    <string name="settings_color">Button color</string>
    <string name="settings_layout">Button layout</string>
    <string name="settings_custom_touch">Custom touch pattern</string>
    <string name="settings_group_about">About</string>
    <string name="settings_about_tapad">About Tapad</string>
    <string name="settings_about_dev">About developer</string>
</resources>