<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_screen3">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_3_title"
            android:textColor="@color/light_primary"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_3_desc"
            android:paddingTop="10dp"
            android:textColor="@color/light_secondary"
            android:textSize="15sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#20000000"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:visibility="visible">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/hello_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textSize="14sp"
                android:textColor="@color/light_primary"
                app:buttonTint="@color/light_primary"
                android:text="@string/hello"
                android:visibility="visible" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/roses_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textSize="14sp"
                android:textColor="@color/light_primary"
                app:buttonTint="@color/light_primary"
                android:text="@string/roses"
                android:visibility="visible" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/faded_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textSize="14sp"
                android:textColor="@color/light_primary"
                app:buttonTint="@color/light_primary"
                android:text="@string/faded"
                android:visibility="visible" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slide_3_hint"
            android:textStyle="italic"
            android:textColor="@color/light_secondary"
            android:gravity="center"
            android:textSize="13sp"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>